Added 0 into “Looking for other players” list, on Booking Form