@@ -144,7 +144,7 @@ public class Group extends Subject{
             return;
         }
 
-        groupHead = users.getFirst();
+        groupHead = users.get(0);
 
     }
 
